<resources>
    <string name="app_author">Scott_Johnston</string>
    <string name="app_contact">none</string>
    <string name="app_name">Koopey</string>
    <string name="app_description">Application created by Scott Johnston</string>
    <string name="app_address">Address</string>
    <string name="bitcoin_transaction_fee">0.00001</string>
    <string name="ethereum_transaction_fee">0.00001</string>
    <string name="button_login">Sign in</string>
    <string name="button_out">Sign out</string>
    <string name="button_list">List</string>
    <string name="button_home">Home</string>
    <string name="button_quit">Quit</string>
    <string name="button_save">Save</string>
    <string name="button_search">Search</string>
    <string name="button_phone">Phone</string>
    <string name="button_register">Register</string>
    <string name="button_about">About</string>
    <string name="button_user">User</string>
    <string name="button_map">Map</string>
    <string name="button_message">Message</string>
    <string name="button_setting">Setting</string>
    <string name="button_share">Share</string>
    <string name="button_review">Review</string>
    <string name="default_credit">1000</string>
    <string name="default_country">es</string>
    <string name="default_currency">eur</string>
    <string name="default_latitude">40.422057</string>
    <string name="default_longitude">-3.702582</string>
    <string name="default_language">en</string>
    <string name="default_period">once</string>
    <string name="default_measure">metric</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_permission">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_authentication">Authentication failed</string>
    <string name="error_own_user">Not possible for own user.</string>
    <string name="error_create">Create failed</string>
    <string name="error_create_bitcoin">Create bitcoin wallet failed</string>
    <string name="error_create_ethereum">Create ethereum wallet failed</string>
    <string name="error_read">Read failed</string>
    <string name="error_update">Update failed</string>
    <string name="error_delete">Delete failed</string>
    <string name="info_authentication">Authentication success</string>
    <string name="info_create">Added</string>
    <string name="info_create_bitcoin">Bitcoin wallet created</string>
    <string name="info_create_ethereum">Ethereum wallet created</string>
    <string name="info_read">Read</string>
    <string name="info_update">Saved</string>
    <string name="info_delete">Deleted</string>
    <string name="info_refresh">Refreshed</string>
    <string name="info_success">Success</string>
    <string name="info_no_results">No results</string>
    <string name="file_privacy_policy_and_data_protection">privacy_policy_and_data_protection_en.txt</string>
    <string name="file_terms_and_conditions">terms_and_conditions_en.txt</string>
    <string name="google_maps_key">AIzaSyARuf5tWAz_Q3zzqipxSLpKmoGCkYs0BMY</string>
    <string name="label_about">About</string>
    <string name="label_active">Active</string>
    <string name="label_address">Address</string>
    <string name="label_alias">Alias</string>
    <string name="label_asset">Asset</string>
    <string name="label_assets">Assets</string>
    <string name="label_available">Available</string>
    <string name="label_avatar">Avatar</string>
    <string name="label_barcode">Barcode</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_bitcoin">Bitcoin</string>
    <string name="label_create">Create</string>
    <string name="label_camera_upload">Camera upload</string>
    <string name="label_calendar">Calendar</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_conversation">Conversation</string>
    <string name="label_conversations">Conversations</string>
    <string name="label_communicate">Communicate</string>
    <string name="label_currency">Currency</string>
    <string name="label_day">Day</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_delete">Delete</string>
    <string name="label_description">Description</string>
    <string name="label_distance">Distance</string>
    <string name="label_education">Education</string>
    <string name="label_ethereum">Ethereum</string>
    <string name="label_email">Email</string>
    <string name="label_end">End</string>
    <string name="label_file">File</string>
    <string name="label_files">Files</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_height">Height</string>
    <string name="label_hour">Hour</string>
    <string name="label_id">Id</string>
    <string name="label_image">Image</string>
    <string name="label_images">Images</string>
    <string name="label_length">Length</string>
    <string name="label_location">Location</string>
    <string name="label_login">Sign in</string>
    <string name="label_main">Main</string>
    <string name="label_map">Map</string>
    <string name="label_max">Max</string>
       <string name="label_message">Message</string>
    <string name="label_messages">Messages</string>
    <string name="label_min">Min</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_my_asset">My Asset</string>
    <string name="label_my_assets">My Assets</string>
    <string name="label_my_user">My User</string>
    <string name="label_name">Name</string>
    <string name="label_none">None</string>
    <string name="label_null">Null</string>
    <string name="label_password">Password</string>
    <string name="label_password_old">Password Old</string>
    <string name="label_password_new">Password New</string>
    <string name="label_price">Price</string>
    <string name="label_reference">Reference</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_register">Register</string>
    <string name="label_results">Results</string>
    <string name="label_review">Review</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_service_search">Search Service</string>
    <string name="label_size">Size</string>
    <string name="label_start">Start</string>
    <string name="label_transaction_search">Start</string>
    <string name="label_month">month</string>
    <string name="label_product_search">Search Products</string>
    <string name="label_period">Period</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_state">State</string>
    <string name="label_search">Search</string>
    <string name="label_services">Services</string>
    <string name="label_settings">Settings</string>
    <string name="label_tag">Tag</string>
    <string name="label_tags">Tags</string>
    <string name="label_title">Title</string>
    <string name="label_total">Total</string>
    <string name="label_track">Track</string>
    <string name="label_transaction">Transaction</string>
    <string name="label_transactions">Transactions</string>
    <string name="label_type">Type</string>
    <string name="label_update">Update</string>
    <string name="label_user">User</string>
    <string name="label_users">Users</string>
    <string name="label_user_name_search">Search name</string>
    <string name="label_user_tag_search">Search Users</string>
    <string name="label_value">Value</string>
    <string name="label_wallet">Wallet</string>
    <string name="label_wallets">Wallets</string>
    <string name="label_week">Week</string>
    <string name="label_weight">Weight</string>
    <string name="label_width">Width</string>
    <string name="label_you">You</string>
    <string name="post_asset_create">https://192.168.1.100:3004/asset/create</string>
    <string name="post_asset_create_image">https://192.168.1.100:3004/asset/create/image</string>
    <string name="post_asset_read">https://192.168.1.100:3004/asset/read/one</string>
    <string name="get_assets_read_mine">https://192.168.1.100:3004/asset/read/many/mine</string>
    <string name="post_assets_read">https://192.168.1.100:3004/asset/read/many</string>
    <string name="post_asset_update">https://192.168.1.100:3004/asset/update</string>
    <string name="post_asset_update_image">https://192.168.1.100:3004/asset/update/image</string>
    <string name="post_asset_update_location">https://192.168.1.100:3004/asset/update/location</string>
    <string name="post_asset_update_quantity">https://192.168.1.100:3004/asset/update/quantity/addition</string>
    <string name="post_asset_delete">https://192.168.1.100:3004/asset/delete</string>
    <string name="post_asset_delete_image">https://192.168.1.100:3004/asset/delete/image</string>
    <string name="post_asset_delete_location">https://192.168.1.100:3004/asset/delete/location</string>
    <string name="post_asset_search">https://192.168.1.100:3004/asset/read/many</string>
    <string name="post_auth_login">https://192.168.1.100:3004/authenticate/login</string>
    <string name="post_auth_password_change">https://192.168.1.100:3004/authenticate/passwordchange</string>
    <string name="post_auth_password_forgotten">https://192.168.1.100:3004/authenticate/password/forgotten/request</string>
    <string name="get_bitcoin_create_address">https://192.168.1.100:3004/bitcoin/create/address</string>
    <string name="get_bitcoin_read_balance">https://192.168.1.100:3004/bitcoin/read/balance</string>
    <string name="post_bitcoin_create_system_receipt">https://192.168.1.100:3004/bitcoin/create/system/receipt</string>
    <string name="post_bitcoin_create_system_invoice">https://192.168.1.100:3004/bitcoin/create/system/invoice</string>
    <string name="post_bitcoin_create_receipt">https://192.168.1.100:3004/bitcoin/create/receipt</string>
    <string name="get_ethereum_create_account">https://192.168.1.100:3004/ethereum/create/account/</string>
    <string name="get_ethereum_read_balance">https://192.168.1.100:3004/ethereum/read/balance</string>
    <string name="post_ethereum_create_receipt">https://192.168.1.100:3004/ethereum/create/receipt</string>
    <string name="post_ethereum_create_system_receipt">https://192.168.1.100:3004/ethereum/create/system/receipt</string>
    <string name="post_ethereum_create_system_invoice">https://192.168.1.100:3004/ethereum/create/system/invoice</string>
    <string name="get_message_read_many">https://192.168.1.100:3004/message/read/many</string>
    <string name="get_message_read_many_unsent">https://192.168.1.100:3004/message/read/many/unsent</string>
    <string name="get_message_read_many_undelivered">https://192.168.1.100:3004/message/read/many/undelivered</string>
    <string name="post_message">https://192.168.1.100:3004/message/create</string>
    <string name="post_review_create">https://192.168.1.100:3004/review/create</string>
    <string name="post_review_asset_read">https://192.168.1.100:3004/review/read/many/asset</string>
    <string name="post_review_user_read">https://192.168.1.100:3004/review/read/many/user</string>
    <string name="get_tags_read">https://192.168.1.100:3004/tag/read/many</string>
    <string name="post_tag_create">https://192.168.1.100:3004/tag/create/one</string>
    <string name="get_transaction_read">https://192.168.1.100:3004/transaction/read/one</string>
    <string name="get_transaction_read_many">https://192.168.1.100:3004/transaction/read/many</string>
    <string name="post_transaction_create">https://192.168.1.100:3004/transaction/create</string>
    <string name="post_transaction_update">https://192.168.1.100:3004/transaction/update</string>
</resources>