<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/label_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/label_my_user" />
    </group>
    <item android:title="@string/label_communicate">
        <menu>
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/label_message" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/button_share" />
        </menu>
    </item>
</menu>
