<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_about"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:scrollbars="none"
        android:background="@drawable/ic_minitrabajo"

        android:contentDescription="@string/label_description">
    </ImageView>

    <TextView
        android:id="@+id/lblName"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:id="@+id/lblDescription"
        android:text="@string/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:id="@+id/lblAddress"
        android:text="@string/app_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/lblAuthor"
        android:text="@string/app_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/lblContact"
        android:text="@string/app_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <!--Event handled in content_main.xml and MainActivity:onFragmentViewClick-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:background="@color/color_secondary_dark"
        android:src="@drawable/ic_email_black_24dp">
    </android.support.design.widget.FloatingActionButton>
</LinearLayout>