<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_messages"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_value"
            android:maxLength="10"
            android:maxLines="1"
            android:text="@string/label_message"
            android:inputType="text"
            android:textSize="@dimen/font_content_size"
            android:clickable="false"
            android:focusable="true">

            <requestFocus />
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_create"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_email_black_24dp"></ImageButton>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_delete"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_cancel"
        android:clickable="true"
        android:focusable="true"
        />

</LinearLayout>