<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_my_transaction_create"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_name"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColorHint="@color/place_autocomplete_search_hint"
                    android:textSize="@dimen/font_content_size"></EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_description"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColorHint="@color/place_autocomplete_search_hint"
                    android:textSize="@dimen/font_content_size"></EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtItemValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_value"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColorHint="@color/place_autocomplete_search_hint"
                    android:textSize="@dimen/font_content_size">

                    <requestFocus />
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_quantity"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColorHint="@color/place_autocomplete_search_hint"
                    android:textSize="@dimen/font_content_size"></EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtTotalValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_total"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColorHint="@color/place_autocomplete_search_hint"
                    android:textSize="@dimen/font_content_size"></EditText>
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/lblCurrency"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/label_currency"
                android:textSize="@dimen/font_content_size"></TextView>

            <Spinner
                android:id="@+id/lstCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_start"
                    android:inputType="date"
                    android:singleLine="true"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_end"
                    android:inputType="date"
                    android:singleLine="true"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginRight="@dimen/label_horizontal_margin"
        android:src="@drawable/ic_add_black_24dp"></android.support.design.widget.FloatingActionButton>


</RelativeLayout>